<resources>
    <string name="app_name">Swiggy</string>

    <!-- Start Auth -->
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="i_have_account">I have an account.</string>
    <!-- End Auth -->


    <!-- Start Navigation Menu -->
    <string name="swiggy">Swiggy</string>
    <string name="food">Food</string>
    <string name="instamart">Instamart</string>
    <string name="dineout">Dineout</string>
    <string name="genie">Genie</string>
    <!-- End Navigation Menu -->

    <string name="email_not_empty">Email cannot be empty</string>
    <string name="email_not_valid">Invalid email</string>
    <string name="password_not_empty">Password cannot be empty</string>
    <string name="password_not_valid">Invalid password</string>


    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="success">Success</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="information">Information</string>
    <string name="loading">Loading</string>
    <string name="authentication_succeeded_but_user_is_null">Authentication succeeded but user is null</string>
    <string name="login_failed">Login failed</string>
    <string name="failed_to_check_login_status">Failed to check login status</string>
    <string name="user_already_exists">User already exists</string>
    <string name="registration_failed">Registration failed</string>
    <string name="registration_success">Registration success</string>
    <string name="logout_failed">Logout failed</string>
    <string name="logout_success">Logout success</string>
    <string name="password_not_match">Password not match</string>

    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="save">Save</string>
    <string name="avatar">Avatar</string>
    <string name="location">Location</string>
    <string name="home">Home</string>
    <string name="search_for">Search for</string>
    <string name="search">Search</string>
    <string name="mic">Mic</string>
    <string name="discover_swiggy">DISCOVER SWIGGY</string>
    <string name="crafted_with_by_hoang_pham">Crafted with ❤️ by Hoang Pham</string>
    <string name="live_nit_up">Live \nit up!</string>

    <!--    exceptions-->
    <string name="some_thing_went_wrong_please_try_again_later">Some thing went wrong. Please try again later!</string>
    <string name="error_user_not_found">User not found.</string>
    <string name="error_invalid_credentials">Invalid email or password.</string>
    <string name="error_user_already_exists">A user with this email already exists.</string>
    <string name="error_weak_password">The password is too weak.</string>
    <string name="error_unknown">An unknown error occurred. Please try again.</string>
</resources>