<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/home">
    </item>
    <item
        android:id="@+id/foodFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/food">
    </item>
    <item
        android:id="@+id/instamartFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/instamart">
    </item>
    <item
        android:id="@+id/dineoutFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/dineout">
    </item>
    <item
        android:id="@+id/genieFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/genie">
    </item>

</menu>