<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.pth.androidapp.ui.auth.fragments.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.fragments.login.LoginFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/orange"
                android:textSize="42sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                style="@style/MyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:errorText="@{viewModel.email.error}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_email"
                    style="@style/MyTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email.text}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                style="@style/MyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:errorText="@{viewModel.password.error}">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tiet_password"
                    style="@style/MyTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password.text}" />
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.rememberMe}"
                android:padding="8dp"
                android:text="@string/remember_me"
                android:textColor="@color/text_color" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/MyAppCompatButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> viewModel.login()}"
                android:text="@string/sign_in"
                android:textAllCaps="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_account"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/navigateToRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/sign_up"
                    android:textColor="@color/orange"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:visibility="gone"
            android:indeterminateTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
